[package]
name = "duat-sneak"
version = "0.4.0"
authors = ["AhoyISki"]
description = "A Duat plugin for finding character sequences, inspired by vim-sneak"
repository = "https://github.com/AhoyISki/duat-sneak"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["editor", "text", "plugin", "duat"]
categories = ["command-line-utilities", "text-editors", "config"]
edition = "2024"

[dependencies]
duat = { version = "0.10.0", default-features = false }
